do job of part of user management

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -860,3 +860,7 @@ h1.page-header {
 .fixed-table-pagination .pagination-detail {
 	margin-top: 20px;
 }
+ .fixed-height{
+	 max-height:200px;
+	 overflow:auto
+ }
