--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,6 +6,7 @@ body {
 	background: gainsboro;
 	padding-top: 50px;
 	color: #5f6468;
+	font-size: 13px;
 }
 p {
 	color: #777;
@@ -73,6 +74,7 @@ h3, h4 {
 .form-control {
 	border: 1px solid #30a5ff;
 	box-shadow: none;
+	font-size: 13px;
 }
 
 .form-control:focus {
@@ -96,6 +98,9 @@ h3, h4 {
 .copyrights{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden;}
 
 /*Buttons*/
+.btn{
+	font-size: 13px;
+}
 
 a.btn:hover,
 button:hover {
@@ -506,9 +511,9 @@ a.bg-danger:hover {
 }
 
 .sidebar form {
-	padding: 20px 15px 5px 15px;
+	padding: 10px 15px 5px 15px;
 	border-bottom: 1px solid #eee;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 @media (min-width: 768px) {
@@ -827,6 +832,9 @@ h1.page-header {
 	border-bottom: 1px solid #e6e7e8;
 	vertical-align: middle;
 	height: 50px;
+}
+.fixed-table-container thead th{
+	font-size: 14px;
 }
 
 .fixed-table-pagination .pagination {
