--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -856,3 +856,14 @@ h1.page-header {
 .form-group {
 	margin-bottom: 2rem;
 }
+
+.black_overlay{
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	padding: 0;
+	margin: 0;
+	z-index:-9999;
+}
